# Live_streaming_platform

./: .env.example  .gitignore  Live_streaming_platform.sln  README.md  admin.html  index.html  package-lock.json  package.json  viewer.html  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: server-platforms.md
server-rust/: Cargo.toml
server-rust/src/: main.rs
src/: App.vue  ViewerApp.vue  main.js  viewer-main.js
src/styles/: stream.css
windows-widget/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MeowLiveChatWidget.csproj  README.md  settings.json
