[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "tls-native-tls", "mysql", "macros"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
srt-tokio = "0.4.3"
bytes = "1.7.2"
futures = "0.3.32"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.8"
lettre = { version = "0.11.7", default-features = false, features = ["tokio1", "tokio1-rustls", "smtp-transport", "builder", "rustls-tls"] }
jsonwebtoken = "9.3.0"
regex = "1.10.6"
